# AMonItor

./: .gitignore  Makefile  README.md  go.work
.github/workflows/: ci.yml  release.yml
agent/: README.md  config.example.json  go.mod  go.sum
agent/cmd/agent/: main.go
agent/internal/config/: config.go
agent/internal/protocol/: types.go
agent/internal/store/: redis_store.go  store.go
agent/internal/ws/: hub.go
docs/: architecture.md  deploy.md  protocol.md  release.md  security.md  ubuntu-from-scratch.md
examples/: README.md  config.json  config.multi.json  config.stress.json  gen_scale_config.py  panel_demo.py  run.multi.sh  run.scale.sh  run.sh  run.stress.sh  run_demo.py  sdk_demo.py
examples/ollama-fastapi/: README.md  config.json  ollama_monitor_app.py  pyproject.toml  run_all.sh  service_a.py  service_b.py
examples/ollama-fastapi/panel/: index.html  package.json  pnpm-lock.yaml
examples/ollama-fastapi/panel/src/: main.ts  vite-env.d.ts
proto/: control_plane.proto
python-sdk/: README.md  pyproject.toml
python-sdk/src/amonitor_sdk/: example.py  models.py  server.py
scripts/: gen_checksums.sh  gen_proto.sh  panel_sim.py  send_action_once.py  test_dedupe_once.py
tests/: simple_sdk_server.py  simple_sdk_server_with_sdk.py  tui_panel.py
tests/e2e/: README.md
