[project]
name = "amonitor-sdk"
version = "0.1.0"
description = "AMonitor Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=13.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
