[project]
name = "amonitor-ollama-fastapi-example"
version = "0.1.0"
description = "Ollama + FastAPI + WS monitor example"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
